Fixed multiple bugs for QR Checkin
